--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
         <section id="redes-sociais">
 
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a> <br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>
+            <a href="sociais/youtubo.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
+            <a href="sociais/github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
+            <a href="sociais/instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
+            <a href="sociais/twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a> <br>
+            <a href="sociais/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a> <br>
 
 
         </section>
